# vecn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  release.yml  rustdoc.yml
crates/vecn/: Cargo.toml
crates/vecn/src/: lib.rs  main.rs
crates/vectory/: Cargo.toml
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  (+1 more)
src/vecn/: lib.rs.html
src/vectory/: lib.rs.html
tests/: accepted.rs  compiletest.rs  consts.rs  methods.rs  tests.rs
tests/ui/: generic_const.rs  generic_const.stderr  generic_lifetime.rs  generic_lifetime.stderr  mutiply_generic_types.rs  mutiply_generic_types.stderr  non_owned_primitive_types.rs  non_owned_primitive_types.stderr  one_field_struct.rs  one_field_struct.stderr  types_not_equal.rs  types_not_equal.stderr  unaccepted_primitive_types.rs  unaccepted_primitive_types.stderr  unit_struct.rs  unit_struct.stderr  zero_field_struct.rs  zero_field_struct.stderr
vecn/: all.html  attr.vector.html  index.html  sidebar-items.js
vecn/src/: lib.rs
vectory/: all.html  index.html  sidebar-items.js  struct.V2xu8.html  struct.V3xi32.html  struct.V4xf64.html  struct.Vec2.html  struct.Vec3.html  struct.Vec4.html
vectory/src/: lib.rs
(+13 files in other folders)
